--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </header>
 
     <div class="main">
-        <img src="resources/stars.png" alt="background with stars" class="stars" />
-        <img src="resources/moon.png" alt="moon" class="moon" />
-        <img src="resources/mountains_behind.png" alt="mountains" class="mountains_behind" />
+        <img src="./resources/stars.png" alt="background with stars" class="stars" />
+        <img src="./resources/moon.png" alt="moon" class="moon" />
+        <img src="./resources/mountains_behind.png" alt="mountains" class="mountains_behind" />
         <h2 class="text">Moon Light</h2>
         <a href="#about" class="btn">Explore</a>
-        <img src="resources/mountains_front.png" alt="mountains" class="mountains_front" />
+        <img src="./resources/mountains_front.png" alt="mountains" class="mountains_front" />
     </div>
 
     <section class="about" id="about">
